--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,11 @@
 <resources>
     <string name="app_name">QueueManager</string>
     <string name="title_activity_create_queue">CreateQueueActivity</string>
+    <string name="cue_name_label">Queue Name</string>
+    <string name="closing_time_label">Closing Time</string>
+    <string name="slot_time_label">Slot Time</string>
+    <string name="min_label">minutes</string>
+    <string name="btn_create_queue">CREATE QUEUE</string>
+    <string name="btn_new_queue">NEW QUEUE</string>
+    <string name="btn_next">CALL NEXT</string>
 </resources>
