Mejora en la obtención de la fecha de entrada del Usuario. Cambio de acces_time a Date en lugar d string

--- a/app/src/main/res/values-ca-rES/strings.xml
+++ b/app/src/main/res/values-ca-rES/strings.xml
@@ -8,5 +8,5 @@
     <string name="min_label">minuts</string>
     <string name="btn_create_queue">CREA CUA</string>
     <string name="btn_new_queue">NOVA CUA</string>
-    <string name="btn_next">AVISA AL SEGÜENT</string>
+    <string name="btn_next">SEGÜENT</string>
 </resources>
